src/core-crm/objects/Financial_Split__c/Financial_Split__c.object-meta.xml
<CustomObject>
    <label>Financial Split</label>
    <nameField>
        <displayFormat>FS-{00000}</displayFormat>
        <label>Financial Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>