src/core-crm/objects/Financial_Split__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <label>Account Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>