src/core-crm/objects/Financial_Split__c/fields/Account_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_GL_Code__c</fullName>
    <label>Account GL Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>