src/core-crm/objects/Financial_Split__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Course record.</description>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Financial Splits</relationshipLabel>
    <relationshipName>Financial_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>