src/core-crm/objects/Financial_Split__c/fields/Funding_Body__c.field-meta.xml
<CustomField>
    <fullName>Funding_Body__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Funding Body Account record.</description>
    <label>Funding Body</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Splits (Funding Body)</relationshipLabel>
    <relationshipName>Financial_Splits1</relationshipName>
    <type>Lookup</type>
</CustomField>