src/core-crm/objects/Financial_Split__c/fields/Funding_Body_Contribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>Funding_Body_Contribution_Amount__c</fullName>
    <description>The amount being contributed to an Opportunity or an Opportunity Outcome by a Funding Body.</description>
    <label>Funding Body Contribution Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>