src/core-crm/objects/Financial_Split__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines if the Financial Split record is currently active.</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>