src/core-crm/objects/Financial_Split__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Opportunity Object.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Financial Splits</relationshipLabel>
    <relationshipName>Financial_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>