src/core-crm/objects/Financial_Split__c/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Provides a lookup to the Opportunity Outcome Object.</description>
    <label>Opportunity Outcome</label>
    <referenceTo>Opportunity_Outcome__c</referenceTo>
    <relationshipLabel>Financial Splits</relationshipLabel>
    <relationshipName>Financial_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>