src/core-crm/objects/Financial_Split__c/fields/Participating_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Participating_School_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participating School Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3 OR 4</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>University_Department</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>QUTeX Products</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>QUT GSB &amp; QUTeX</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Splits</relationshipLabel>
    <relationshipName>Financial_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>