src/core-crm/objects/Financial_Split__c/fields/Percentage_split__c.field-meta.xml
<CustomField>
    <fullName>Percentage_split__c</fullName>
    <label>Percentage Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>