src/core-crm/objects/Financial_Split__c/fields/QUTeX_Percentage_Split__c.field-meta.xml
<CustomField>
    <fullName>QUTeX_Percentage_Split__c</fullName>
    <label>QUTeX Percentage Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>