src/core-crm/objects/Financial_Split__c/fields/Revenue_Split_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Split_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account that is the recipient of the revenue split.</description>
    <label>Revenue Split Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Splits (Revenue Split Account)</relationshipLabel>
    <relationshipName>Financial_Splits_Revenue_Split_Account</relationshipName>
    <type>Lookup</type>
</CustomField>