src/core-crm/objects/Financial_Split__c/fields/Revenue_Split_Contact__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Split_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Contact that is the recipient of the revenue split.</description>
    <label>Revenue Split Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Splits</relationshipLabel>
    <relationshipName>Financial_Splits_Revenue_Split_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>