src/core-crm/objects/Financial_Split__c/recordTypes/Course_Financial_Split.recordType-meta.xml
<RecordType>
    <fullName>Course_Financial_Split</fullName>
    <active>true</active>
    <description>Capture the revenue financial split details between QUTeX and the Course Owning Faculties.</description>
    <label>Course Financial Split</label>
</RecordType>