src/core-crm/objects/Financial_Split__c/recordTypes/Opportunity_Funding_Body.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Funding_Body</fullName>
    <active>true</active>
    <description>Capture the partner funding contribution details for an Opportunity.</description>
    <label>Opportunity Funding Body</label>
</RecordType>