src/core-crm/objects/Financial_Split__c/recordTypes/Opportunity_Outcome_Account_Revenue_Financial_Split.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Outcome_Account_Revenue_Financial_Split</fullName>
    <active>true</active>
    <description>Capture University Department revenue split percentage for an Opportunity Outcome.</description>
    <label>Opportunity Outcome Account Revenue Financial Split</label>
</RecordType>