src/core-crm/objects/Financial_Split__c/recordTypes/Opportunity_Outcome_Contact_Revenue_Financial_Split.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Outcome_Contact_Revenue_Financial_Split</fullName>
    <active>true</active>
    <description>Capture revenue split percentage of an Individual for an Opportunity Outcome.</description>
    <label>Opportunity Outcome Contact Revenue Financial Split</label>
</RecordType>