src/core-crm/objects/Financial_Split__c/recordTypes/Opportunity_Outcome_Funding_Body.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Outcome_Funding_Body</fullName>
    <active>true</active>
    <description>Capture the partner funding contribution details for a Project.</description>
    <label>Opportunity Outcome Funding Body</label>
</RecordType>